[package]
name = "kalc"
description = "Is a calculator for math"
version = "0.1.0"
edition = "2021"
authors = ["konkitoman"]
license = "MPL-2.0"
repository = "https://github.com/konkitoman/kalc" 
keywords = ["calc", "kalc"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
